Fix Form label text being cutoff on mobile

--- a/src/components/routes/TestView/TestView.css
+++ b/src/components/routes/TestView/TestView.css
@@ -39,6 +39,15 @@
     margin-left: 0;
     height: 4rem;
 }
+@media screen and (max-width: 768px) {
+    .steps-content-form-item .ant-form-item-label {
+        white-space: normal;
+        margin-left: 0;
+        height: 7rem;
+        line-height: 1.7rem;
+        margin-bottom: -1vh;
+    }
+}
   
 .steps-action {
     float: right;
